// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c8 /* c8 ignore next */ ignores lines with special comment 1`] = `
",covered
covered
-------------------|----------|----------|----------|----------|-------------------|
File               |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-------------------|----------|----------|----------|----------|-------------------|
All files          |    86.21 |    91.67 |    66.67 |    86.21 |                   |
 async.js          |      100 |      100 |      100 |      100 |                   |
 c8-ignore-next.js |    90.91 |      100 |      100 |    90.91 |             21,22 |
 normal.js         |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
-------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 ESM Modules collects coverage for ESM modules 1`] = `
",bar foo
------------|----------|----------|----------|----------|-------------------|
File        |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
------------|----------|----------|----------|----------|-------------------|
All files   |    83.33 |      100 |    66.67 |    83.33 |                   |
 export.cjs |      100 |      100 |      100 |      100 |                   |
 export.mjs |    71.43 |      100 |       50 |    71.43 |               2,3 |
 import.mjs |      100 |      100 |      100 |      100 |                   |
------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 check-coverage allows --check-coverage when executing script 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|----------|----------|----------|----------|-------------------|
File       |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------|----------|----------|----------|----------|-------------------|
All files  |    83.33 |    85.71 |       60 |    83.33 |                   |
 async.js  |      100 |      100 |      100 |      100 |                   |
 normal.js |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
-----------|----------|----------|----------|----------|-------------------|
,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
"
`;

exports[`c8 check-coverage allows threshold to be applied on per-file basis 1`] = `
",,ERROR: Coverage for lines (100%) does not meet threshold (101%) for test/fixtures/async.js
ERROR: Coverage for lines (75%) does not meet threshold (101%) for test/fixtures/normal.js
"
`;

exports[`c8 check-coverage exits with 0 if coverage within threshold 1`] = `",,"`;

exports[`c8 check-coverage exits with 1 if coverage is below threshold 1`] = `
",,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
"
`;

exports[`c8 merges reports from subprocesses together 1`] = `
",first

second

-------------------|----------|----------|----------|----------|-------------------|
File               |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-------------------|----------|----------|----------|----------|-------------------|
All files          |      100 |      100 |      100 |      100 |                   |
 multiple-spawn.js |      100 |      100 |      100 |      100 |                   |
 subprocess.js     |      100 |      100 |      100 |      100 |                   |
-------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 report generates report from existing temporary files 1`] = `
",-----------|----------|----------|----------|----------|-------------------|
File       |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------|----------|----------|----------|----------|-------------------|
All files  |    83.33 |    85.71 |       60 |    83.33 |                   |
 async.js  |      100 |      100 |      100 |      100 |                   |
 normal.js |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
-----------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 report supports --check-coverage, when generating reports 1`] = `
",-----------|----------|----------|----------|----------|-------------------|
File       |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------|----------|----------|----------|----------|-------------------|
All files  |    83.33 |    85.71 |       60 |    83.33 |                   |
 async.js  |      100 |      100 |      100 |      100 |                   |
 normal.js |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
-----------|----------|----------|----------|----------|-------------------|
,ERROR: Coverage for lines (83.33%) does not meet global threshold (101%)
"
`;

exports[`c8 reports coverage for script that exits normally 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------|----------|----------|----------|----------|-------------------|
File       |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------|----------|----------|----------|----------|-------------------|
All files  |    83.33 |    85.71 |       60 |    83.33 |                   |
 async.js  |      100 |      100 |      100 |      100 |                   |
 normal.js |       75 |    66.67 |    33.33 |       75 | 14,15,16,18,19,20 |
-----------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 source-maps TypeScript remaps branches 1`] = `
",reachable
a = true
a = false
------------------------|----------|----------|----------|----------|-------------------|
File                    |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
------------------------|----------|----------|----------|----------|-------------------|
All files               |       84 |    57.14 |      100 |       84 |                   |
 branches.typescript.ts |       84 |    57.14 |      100 |       84 |        7,11,12,18 |
------------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 source-maps TypeScript remaps classes 1`] = `
",covered
covered
covered
covered
covered
-----------------------|----------|----------|----------|----------|-------------------|
File                   |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------------------|----------|----------|----------|----------|-------------------|
All files              |    81.82 |     87.5 |       60 |    81.82 |                   |
 classes.typescript.ts |    81.82 |     87.5 |       60 |    81.82 | 12,13,21,22,27,28 |
-----------------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 source-maps UglifyJS remaps branches 1`] = `
",reachable
a = true
a = false
-------------|----------|----------|----------|----------|-------------------|
File         |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-------------|----------|----------|----------|----------|-------------------|
All files    |       80 |       50 |      100 |       80 |                   |
 branches.js |       80 |       50 |      100 |       80 |          2,5,6,13 |
-------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 source-maps UglifyJS remaps classes 1`] = `
",covered
covered
covered
covered
covered
------------|----------|----------|----------|----------|-------------------|
File        |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
------------|----------|----------|----------|----------|-------------------|
All files   |    85.19 |    83.33 |       60 |    85.19 |                   |
 classes.js |    85.19 |    83.33 |       60 |    85.19 |         6,7,15,21 |
------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 source-maps nyc remaps branches 1`] = `
",reachable
a = true
a = false
-------------|----------|----------|----------|----------|-------------------|
File         |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-------------|----------|----------|----------|----------|-------------------|
All files    |       70 |    44.44 |      100 |       70 |                   |
 branches.js |       70 |    44.44 |      100 |       70 |      2,4,5,6,7,13 |
-------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 source-maps nyc remaps classes 1`] = `
",covered
covered
covered
covered
covered
------------|----------|----------|----------|----------|-------------------|
File        |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
------------|----------|----------|----------|----------|-------------------|
All files   |    70.37 |    66.67 |       60 |    70.37 |                   |
 classes.js |    70.37 |    66.67 |       60 |    70.37 |... ,8,15,16,21,22 |
------------|----------|----------|----------|----------|-------------------|
,"
`;

exports[`c8 supports exeternally set NODE_V8_COVERAGE 1`] = `
",hey
i am a line of code
what
hey
what
hey
what
hey
-----------------------|----------|----------|----------|----------|-------------------|
File                   |  % Stmts | % Branch |  % Funcs |  % Lines | Uncovered Line #s |
-----------------------|----------|----------|----------|----------|-------------------|
All files              |    89.77 |    74.21 |    88.14 |    89.77 |                   |
 bin                   |    69.81 |    64.29 |    92.86 |    69.81 |                   |
  c8.js                |    69.81 |    64.29 |    92.86 |    69.81 |... 49,50,51,52,53 |
 lib                   |    93.33 |    72.73 |      100 |    93.33 |                   |
  is-cjs-esm-bridge.js |       90 |       70 |      100 |       90 |                 9 |
  parse-args.js        |    97.69 |    47.83 |      100 |    97.69 |        99,107,108 |
  report.js            |    90.29 |    83.64 |      100 |    90.29 |... 40,160,161,162 |
 lib/commands          |    89.53 |    85.71 |       75 |    89.53 |                   |
  check-coverage.js    |    88.33 |    93.33 |       75 |    88.33 |... 46,57,58,59,60 |
  report.js            |    92.31 |    76.92 |       75 |    92.31 |              9,10 |
 test/fixtures         |    89.19 |    94.44 |       70 |    89.19 |                   |
  async.js             |      100 |      100 |      100 |      100 |                   |
  export.mjs           |    71.43 |      100 |       50 |    71.43 |               2,3 |
  import.mjs           |      100 |      100 |      100 |      100 |                   |
  multiple-spawn.js    |      100 |      100 |      100 |      100 |                   |
  normal.js            |       75 |       75 |    33.33 |       75 | 14,15,16,18,19,20 |
  subprocess.js        |      100 |      100 |      100 |      100 |                   |
-----------------------|----------|----------|----------|----------|-------------------|
,"
`;
